<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_round"
    app:layout_behavior="com.google.android.material.BottomSheet">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:clickable="false"
        android:focusable="true"
        android:padding="16dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:id="@+id/back_btn"
            android:src="@drawable/ic_chevron_left"
            android:tint="@color/textColor"
            android:contentDescription="@string/bottom_sheet_choose_font"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Select Font"
            android:paddingStart="10dp"
            android:textColor="@color/textColor"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/font_list"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/font_literata"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:src="@drawable/ic_check"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:tint="@color/textColor"
                android:contentDescription="@string/bottom_sheet_choose_font"
                android:visibility="invisible"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/literata_font"
                android:fontFamily="@font/literata"
                android:textColor="@color/textColor"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/font_sans"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:src="@drawable/ic_check"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:tint="@color/textColor"
                android:contentDescription="@string/bottom_sheet_choose_font"
                android:visibility="invisible"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/open_sans_font"
                android:fontFamily="@font/opensans"
                android:textColor="@color/textColor"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/font_volkhov"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:src="@drawable/ic_check"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:tint="@color/textColor"
                android:contentDescription="@string/bottom_sheet_choose_font"
                android:visibility="invisible"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/volkhov_font"
                android:fontFamily="@font/volkhov"
                android:textColor="@color/textColor"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/font_merriweather"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:src="@drawable/ic_check"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:tint="@color/textColor"
                android:contentDescription="@string/bottom_sheet_choose_font"
                android:visibility="invisible"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/merriweather_font"
                android:fontFamily="@font/merriweather"
                android:textColor="@color/textColor"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>