<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_home" />
        <TextView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/highlight_blue"
            android:text="Search"
            android:textSize="14sp"
            />
    </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="6dp">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                app:sliderAnimationDuration="500"
                app:sliderAutoCycleDirection="right"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="500"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="2dp"
                app:sliderIndicatorRadius="1.5dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="3"
                app:sliderStartAutoCycle="true" />

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/for_you"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listview_foryou"
            style="@style/Widget.AppCompat.Light.ListView.DropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:divider="@null"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal"
            android:paddingVertical="6pt"
            android:paddingEnd="8pt"
            android:scrollbars="none" />

        <TextView
            style="@style/section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_trend"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listview_trending"
            style="@style/Widget.AppCompat.Light.ListView.DropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:divider="@null"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal"
            android:paddingVertical="6pt"
            android:paddingEnd="8pt"
            android:scrollbars="none" />

        <!--    <WebView-->
        <!--        android:id="@+id/webview"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="match_parent" />-->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_nav" />
    </LinearLayout>
</ScrollView>